Commit various local changes

--- a/templates/main.htm
+++ b/templates/main.htm
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Library Management System</title>
         <style>
-            td { border: 1px solid; border-color: blue; ; padding: 5px;}
+            td { border: 1px solid; border-color: blue; padding: 5px;}
         </style>
         <script type="text/javascript">
             function show_book_addition() {
@@ -21,40 +21,83 @@
                 document.getElementById("transact").style.visibility="visible";
                 document.getElementById("isbn").focus();
             }
-            /*function transact() {
-                let data = new FormData();
-                p = document.getElementById("indicator");
-                data.append("isbn", document.getElementById("isbn").value);
-                fetch( "/", {
-                    "method": "POST",
-                    "body": data,
-                }).then(response => response.json()).then(text => p.innerText=text);
-            }
-            */
+            //function transact() {
+            //    let data = new FormData();
+            //    p = document.getElementById("indicator");
+            //    data.append("isbn", document.getElementById("isbn").value);
+            //    fetch( "/", {
+            //        "method": "POST",
+            //        "body": data,
+            //    }).then(response => response.json()).then(text => p.innerText=text);
+            //}
+			function colsort(n) {
+				// Load table into array
+				var book_table = document.getElementById("book_table");
+				var t = Array();
+				for (i=0; i < book_table.children.length; i++) {
+					t.push(book_table.children[i]);
+				}
+				t = t.sort(function(a, b){return a.cells[n].innerText > b.cells[n].innerText;});
+			}
         </script>
     </head>
     <body>
         <h1 style="text-align: center;">Library Management System</h1>
-        <h6 style="text-align: right;">{{ pagedate }}</h6>
+        <p style="text-align: right;">Page generated at {{ pagedate }}</p>
         <form method="POST" id="mainform">
             <input type="text" placeholder="ISBN" id="isbn" name="isbn" autofocus>
-            <input type="button" value="Add new book" id="show_add_book" name="show_add_book" onClick="show_book_addition();">
+			<button type="button" id="show_add_book" name="show_add_book" onClick="show_book_addition();" title="Show form for adding a book">Add a book</button>
             <!-- <input type="button" value="Check-out/Check-in" name="transact" onClick="transact();"> -->
-            <input type="submit" value="Check-out/Check-in" id="transact" name="transact">
+			<button type="submit" id="transact" name="transact" title="Check-in or check-out an existing book">Check-out/Check-in</button>
         </form>
         <form method="POST" action="/add" id="book_addition" style="visibility: hidden;">
-            <label>ISBN: </label><input type="text" placeholder="ISBN" name="isbn_new" id="isbn_new" required autofocus><br/>
-            <label>Book name: </label><input type="text" placeholder="Name of book" name="bookname" id="bookname"><br />
-            <label>Author name: </label><input type="text" placeholder="Name of author" name="author" id="author"><br />
-            <label>Purchase date: </label><input type="date" name="purchase_date" id="purchase_date"><br />
-            <label>Location of purchase: </label><input type="text" placeholder="Where book was purchased" name="purchase_location" id="purchase_location"><br />
-            <label>Genre: </label><input type="text" placeholder="Genre" name="genre" id="genre"><br />
-            <label style="color: red"">Book location: </label><input type="text" placeholder="Shelf where book belongs" name="location" id="location" required><br />
+		    <table>
+			<tr>
+                <td><label>ISBN: </label></td>
+				<td><input type="text" placeholder="ISBN" name="isbn_new" id="isbn_new" required autofocus></td>
+			</tr>
+			<tr>
+                <td><label>Book name: </label></td>
+				<td><input type="text" placeholder="Name of book" name="bookname" id="bookname"></td>
+			</tr>
+			<tr>
+                <td><label>Author name: </label></td>
+				<td><input type="text" placeholder="Name of author" name="author" id="author"></td>
+			</tr>
+			<tr>
+                <td><label>Purchase date: </label></td>
+				<td><input type="date" name="purchase_date" id="purchase_date"></td>
+			</tr>
+			<tr>
+                <td><label>Location of purchase: </label></td>
+				<td><input type="text" placeholder="Where book was purchased" name="purchase_location" id="purchase_location"></td>
+			</tr>
+			<tr>
+                <td><label>Genre: </label></td>
+				<td><input type="text" placeholder="Genre" name="genre" id="genre" required></td>
+			</tr>
+			<tr>
+		        <td><label style="color: red">Book location: </label></td>
+			{% if shelves -%}
+			    <td><select name="location" id="location" required>
+			{% for room_name in shelves -%}
+			    <optgroup label="{{ room_name }}">
+				{% for shelf_no in shelves[room_name] -%}
+				    <option value="{{ room_name }}, {{ shelf_no }}">{{ shelf_no }}</option>
+				{% endfor -%}
+				</optgroup>
+			{% endfor -%}
+			    </select></td>
+		    {% else -%}
+			    <td><input type="text" placeholder="Shelf where book belongs" name="location" id="location" required></td>
+			{% endif -%}
             <input type="hidden" name="checkout_status" id="checkout_status" value="checked_in">
             <input type="hidden" name="transaction_date" id="transaction_date" value="[]">
-            <input type="submit" value="Add" name="add_book" id="add_book">
-            <input type="reset"  value="Reset" name="reset_add_book" id="reset_add_book">
-            <input type="button" value="Cancel" name="cancel_add_book" id="cancel_add_book" onClick="cancel_book_addition();">
+			<tr>
+				<button type="submit" name="add_book" id="add_book" title="Add book to database">Add</button>
+				<button type="button" name="cancel_add_book" id="cancel_add_book" onClick="cancel_book_addition();" title="Cancel book addition">Cancel</button>
+			</tr>
+			</table>
         </form>
         <hr>
         <p id="indicator" style="background-color: lavender;">{{ status }}</p>
@@ -62,22 +105,22 @@
         <h2 style="text-align: center;">Current library</h2>
         <table>
             <!-- Generate table of books -->
-            <thead>
+			<thead>
             <tr>
-                <th>ISBN</th>
-                <th>Name</th>
-                <th>Author</th>
-                <th>Purchase date</th>
-                <th>Purchase location</th>
-                <th>Genre</th>
-                <th>Book location</th>
-                <th>Status</th>
-                <th>Last checkout</th>
-                <th>Last checkin</th>
+                <th onClick="colsort(0);">ISBN</th>
+                <th onClick="colsort(1);">Name</th>
+                <th onClick="colsort(2);">Author</th>
+                <th onClick="colsort(3);">Purchase date</th>
+                <th onClick="colsort(4);">Purchase location</th>
+                <th onClick="colsort(5);">Genre</th>
+                <th onClick="colsort(6);">Book location</th>
+                <th onClick="colsort(7);">Status</th>
+                <th onClick="colsort(8);">Last checkout</th>
+                <th onClick="colsort(9);">Last checkin</th>
             </tr>
-            <thead>
-            <tbody>
-            {% if lib != None -%}
+			<thead>
+			<tbody id="book_table">
+			{% if lib %}
             {% for ISBN in lib -%}
             <tr class="book_row">
                 <td>{{ ISBN }}</td>
@@ -91,24 +134,25 @@
                         <td style="color:red; font-weight: bold;"> Checked out </td>
                     {% elif lib[ISBN]['CHECKOUT_STATUS'] == 'checked_in' %}
                         <td style="color:green; font-weight: bold;"> Checked in </td>
-                    {% else %}
-                        <td> {{ lib[ISBN]['CHECKOUT_STATUS'] }} </td>
+					{% else %}
+						<td> {{ lib[ISBN]['CHECKOUT_STATUS'] }} </td>
                     {% endif %}
                 <td>{{ lib[ISBN]['TRANSACTION_DATES'][-1][0] }}</td>
                 <td>{{ lib[ISBN]['TRANSACTION_DATES'][-1][1] }}</td>
             </tr>
             {% endfor -%}
-            {% endif -%}
-            </tbody>
+			{% endif %}
+			</tbody>
         </table>
-        <script type="text/javascript">
-            var currentdate = new Date();
-            var bookrows = document.getElementsByClassName("book_row");
-            for (i=0; i < bookrows.length; i++) {
-                if ((bookrows[i].cells[7].innerText == "Checked out") && ((currentdate.getTime() - (Date.parse(bookrows[i].cells[8].innerText))) / (1000*60*60*24) > {{ past_due }} )) {
-                        alert("Book '" + bookrows[i].cells[1].innerText + "' checked out for over {{ past_due }} days");
-                }
-            }
-        </script>
+		<script type="text/javascript">
+			var currentdate = new Date();
+			var bookrows = document.getElementsByClassName("book_row");
+			for (i=0; i < bookrows.length; i++) {
+				// 1000*60*60*24=86400000
+				if ((bookrows[i].cells[7].innerText == "Checked out") && ((currentdate.getTime() - (Date.parse(bookrows[i].cells[8].innerText))) / 86400000 > {{ past_due }} )) {
+						alert("Book '" + bookrows[i].cells[1].innerText + "' checked out for over {{ past_due }} days");
+				}
+			}
+		</script>
     </body>
 </html>
