code cleanup and addition of stats

--- a/templates/main.htm
+++ b/templates/main.htm
@@ -50,6 +50,7 @@
             <!-- <input type="button" value="Check-out/Check-in" name="transact" onClick="transact();"> -->
 			<button type="submit" id="transact" name="transact" title="Check-in or check-out an existing book">Check-out/Check-in</button>
         </form>
+		<div style="text-align: right;"><button onclick='window.location.href="stats"'>Stats</button></div>
         <form method="POST" action="/add" id="book_addition" style="visibility: hidden;">
 		    <table>
 			<tr>
