--- a/templates/main.htm
+++ b/templates/main.htm
@@ -1,36 +1,36 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>Library Management System</title>
-        <style>
-            td { border: 1px solid; border-color: blue; padding: 5px; }
+	<head>
+		<meta charset="utf-8" />
+		<title>{{ ui_translations['title'][ui_lang] }}</title>
+		<style>
+			td { border: 1px solid; border-color: blue; padding: 5px; }
 			.table_header { cursor:pointer; }
-        </style>
-        <script type="text/javascript">
-            function show_book_addition() {
-                document.getElementById("book_addition").style.visibility="visible";
-                document.getElementById("isbn").style.visibility="hidden";
-                document.getElementById("show_add_book").style.visibility="hidden";
-                document.getElementById("transact").style.visibility="hidden";
-                document.getElementById("isbn_new").focus();
-            }
-            function cancel_book_addition() {
-                document.getElementById("book_addition").style.visibility="hidden";
-                document.getElementById("isbn").style.visibility="visible";
-                document.getElementById("show_add_book").style.visibility="visible";
-                document.getElementById("transact").style.visibility="visible";
-                document.getElementById("isbn").focus();
-            }
-            //function transact() {
-            //    let data = new FormData();
-            //    p = document.getElementById("indicator");
-            //    data.append("isbn", document.getElementById("isbn").value);
-            //    fetch( "/", {
-            //        "method": "POST",
-            //        "body": data,
-            //    }).then(response => response.json()).then(text => p.innerText=text);
-            //}
+		</style>
+		<script type="text/javascript">
+			function show_book_addition() {
+				document.getElementById("book_addition").removeAttribute("hidden");
+				document.getElementById("isbn").setAttribute("hidden", "");
+				document.getElementById("show_add_book").setAttribute("hidden","");
+				document.getElementById("transact").setAttribute("hidden","");
+				document.getElementById("isbn_new").focus();
+			}
+			function cancel_book_addition() {
+				document.getElementById("book_addition").setAttribute("hidden","");
+				document.getElementById("isbn").removeAttribute("hidden");
+				document.getElementById("show_add_book").removeAttribute("hidden");
+				document.getElementById("transact").removeAttribute("hidden");
+				document.getElementById("isbn").focus();
+			}
+			//function transact() {
+			//    let data = new FormData();
+			//    p = document.getElementById("indicator");
+			//    data.append("isbn", document.getElementById("isbn").value);
+			//    fetch( "/", {
+			//        "method": "POST",
+			//        "body": data,
+			//    }).then(response => response.json()).then(text => p.innerText=text);
+			//}
 			function colsort(n) {
 				// Load table into array
 				var book_table = document.getElementById("book_table");
@@ -39,53 +39,54 @@
 					t.push(book_table.children[i]);
 				}
 				t = t.sort(function(a, b){return a.cells[n].innerText > b.cells[n].innerText;});
-				// Write contents of t to original table
+				// Write contents of t to original table;
+				// works on Firefox but not on Edge for some reason
 				for (i=0; i < book_table.children.length; i++) {
 					book_table.appendChild(t[i]);
 				}
 			}
-        </script>
-    </head>
-    <body>
-        <h1 style="text-align: center;">Library Management System</h1>
-        <p style="text-align: right;">Page generated at {{ pagedate }}</p>
-        <form style="text-align: center;" method="POST" id="mainform">
-            <input type="text" placeholder="ISBN" id="isbn" name="isbn" autofocus>
-			<button type="button" id="show_add_book" name="show_add_book" onClick="show_book_addition();" title="Show form for adding a book">Add a book</button>
-            <!-- <input type="button" value="Check-out/Check-in" name="transact" onClick="transact();"> -->
-			<button type="submit" id="transact" name="transact" title="Check-in or check-out an existing book">Check-out/Check-in</button>
-        </form>
+		</script>
+	</head>
+	<body>
+		<h1 style="text-align: center;">{{ ui_translations['title'][ui_lang] }}</h1>
+		<p style="text-align: right;">{{ ui_translations['page_generation_time_msg'][ui_lang] }}UTC {{ pagedate }}</p>
+		<form style="text-align: center;" method="POST" id="mainform">
+			<input type="text" placeholder="ISBN" id="isbn" name="isbn" autofocus>
+			<button type="button" id="show_add_book" name="show_add_book" onClick="show_book_addition();" title="{{ ui_translations['add_book_form_button_title'][ui_lang] }}">{{ ui_translations['add_book_form_button_label'][ui_lang] }}</button>
+			<!-- <input type="button" value="Check-out/Check-in" name="transact" onClick="transact();"> -->
+			<button type="submit" id="transact" name="transact" title="{{ ui_translations['checkin_checkout_button_title'][ui_lang] }}">{{ ui_translations['checkin_checkout_button_label'][ui_lang] }}</button>
+		</form>
 		<div style="text-align: right;">
-			<button onclick='window.location.href="stats"'>Stats</button>
+			<button onclick='window.location.href="stats"'>{{ ui_translations['stats_button_label'][ui_lang] }}</button>
 		</div>
-			<form method="POST" action="/add" id="book_addition" style="visibility: hidden;">
+			<form method="POST" action="/add" id="book_addition" hidden>
 				<table style="margin: auto;">
 					<tr>
 						<td><label>ISBN: </label></td>
 						<td><input type="text" placeholder="ISBN" name="isbn_new" id="isbn_new" required autofocus></td>
 					</tr>
 					<tr>
-						<td><label>Book name: </label></td>
-						<td><input type="text" placeholder="Name of book" name="bookname" id="bookname"></td>
+						<td><label>{{ ui_translations['add_book_bookname_label'][ui_lang] }}</label></td>
+						<td><input type="text" placeholder="{{ ui_translations['add_book_bookname_placeholder'][ui_lang] }}" name="bookname" id="bookname"></td>
 					</tr>
 					<tr>
-						<td><label>Author name: </label></td>
-						<td><input type="text" placeholder="Name of author" name="author" id="author"></td>
+						<td><label>{{ ui_translations['add_book_authorname_label'][ui_lang] }}</label></td>
+						<td><input type="text" placeholder="{{ ui_translations['add_book_authorname_placeholder'][ui_lang] }}" name="author" id="author"></td>
 					</tr>
 					<tr>
-						<td><label>Acquisition date: </label></td>
+						<td><label>{{ ui_translations['add_book_acquisitiondate_label'][ui_lang] }}</label></td>
 						<td><input type="date" name="acquisition_date" id="acquisition_date"></td>
 					</tr>
 					<tr>
-						<td><label>Location of acquisition: </label></td>
-						<td><input type="text" placeholder="Where book was acquired" name="acquisition_location" id="acquisition_location"></td>
+						<td><label>{{ ui_translations['add_book_source_label'][ui_lang] }}</label></td>
+						<td><input type="text" placeholder="{{ ui_translations['add_book_source_placeholder'][ui_lang] }}" name="acquisition_location" id="acquisition_location"></td>
 					</tr>
 					<tr>
-						<td><label>Genre: </label></td>
-						<td><input type="text" placeholder="Genre" name="genre" id="genre"></td>
+						<td><label>{{ ui_translations['add_book_genre_label'][ui_lang] }}</label></td>
+						<td><input type="text" placeholder="{{ ui_translations['add_book_genre_placeholder'][ui_lang] }}" name="genre" id="genre"></td>
 					</tr>
 					<tr>
-						<td><label style="color: red">Book location: </label></td>
+						<td><label style="color: red">{{ ui_translations['add_book_location_label'][ui_lang] }}</label></td>
 						{% if shelves -%}
 						<td>
 							<select name="location" id="location" required>
@@ -100,80 +101,84 @@
 						</td>
 						{% else -%}
 						<td>
-							<input type="text" placeholder="Shelf where book belongs" name="location" id="location" required>
+							<input type="text" placeholder="{{ ui_translations['add_book_location_placeholder'][ui_lang] }}" name="location" id="location" required>
 						</td>
 						{% endif -%}
 					</tr>
 					<tr>
-						<td><label>User: </label></td>
+						<td><label>{{ ui_translations['add_book_user_label'][ui_lang] }}</label></td>
 						<td><input type="text" value="username" name="username" id="username" required></td>
 					</tr>
 					<input type="hidden" name="checkout_status" id="checkout_status" value="checked in">
 					<input type="hidden" name="transaction_date" id="transaction_date" value="[]">
 					<div style="text-align: center;">
-						<button type="submit" name="add_book" id="add_book" title="Add book to database">Add book to database</button>
-						<button type="button" name="cancel_add_book" id="cancel_add_book" onClick="cancel_book_addition();" title="Cancel book addition">Cancel</button>
+						<button type="submit" name="add_book" id="add_book" title="{{ ui_translations['add_book_button_title'][ui_lang] }}">{{ ui_translations['add_book_button_label'][ui_lang] }}</button>
+						<button type="button" name="cancel_add_book" id="cancel_add_book" onClick="cancel_book_addition();" title="{{ ui_translations['cancel_add_book_button_title'][ui_lang] }}">{{ ui_translations['cancel_add_book_button_label'][ui_lang] }}</button>
 					</div>
 				</table>
 			</form>
-        <hr>
-        <p id="indicator" style="background-color: lavender;">{{ status }}</p>
-        <hr>
-        <h2 style="text-align: center;">Current library</h2>
-        <table>
-            <!-- Generate table of books -->
+		<hr>
+		<p id="indicator" style="background-color: lavender;">{{ status }}</p>
+		<hr>
+		<h2 style="text-align: center;">{{ ui_translations['library_header'][ui_lang] }}</h2>
+		<table>
+			<!-- Generate table of books -->
 			<thead>
-            <tr class="table_header">
-                <th onClick="colsort(0);">ISBN</th>
-                <th onClick="colsort(1);">Name</th>
-                <th onClick="colsort(2);">Author</th>
-				<th onClick="colsort(3);">Language</th>
-				<th onClick="colsort(4);">Publisher</th>
-				<th onClick="colsort(5);">Publication year</th>
-				<th onClick="colsort(6);">Genres</th>
-                <th onClick="colsort(7);">Acquisition date</th>
-                <th onClick="colsort(8);">Acquisition location</th>
-                <th onClick="colsort(9);">Book location</th>
-                <th onClick="colsort(10);">Status</th>
-                <th onClick="colsort(11);">Last transaction</th>
-            </tr>
+			<tr class="table_header">
+				<th onClick="colsort(0);">ISBN</th>
+				<th onClick="colsort(1);">{{ ui_translations['book_table_name'][ui_lang] }}</th>
+				<th onClick="colsort(2);">{{ ui_translations['book_table_author'][ui_lang] }}</th>
+				<th onClick="colsort(3);">{{ ui_translations['book_table_language'][ui_lang] }}</th>
+				<th onClick="colsort(4);">{{ ui_translations['book_table_publisher'][ui_lang] }}</th>
+				<th onClick="colsort(5);">{{ ui_translations['book_table_pubyear'][ui_lang] }}</th>
+				<th onClick="colsort(6);">{{ ui_translations['book_table_genre'][ui_lang] }}</th>
+				<th onClick="colsort(7);">{{ ui_translations['book_table_acquisitiondate'][ui_lang] }}</th>
+				<th onClick="colsort(8);">{{ ui_translations['book_table_source'][ui_lang] }}</th>
+				<th onClick="colsort(9);">{{ ui_translations['book_table_location'][ui_lang] }}</th>
+				<th onClick="colsort(10);">{{ ui_translations['book_table_lendstatus'][ui_lang] }}</th>
+				<th onClick="colsort(11);">{{ ui_translations['book_table_lasttransaction'][ui_lang] }}</th>
+			</tr>
 			<thead>
 			<tbody id="book_table">
 			{% if lib %}
-            {% for ISBN in lib -%}
-            <tr class="book_row">
-                <td>{{ ISBN }}</td>
-                <td>{{ lib[ISBN]['BOOKNAME'] }}</td>
-                <td>{{ lib[ISBN]['AUTHORS'] }}</td>
+			{% for ISBN in lib -%}
+			<tr class="book_row">
+				<td>{{ ISBN }}</td>
+				<td>{{ lib[ISBN]['BOOKNAME'] }}</td>
+				<td>{{ lib[ISBN]['AUTHORS'] }}</td>
 				<td>{{ lib[ISBN]['LANGUAGE'] }}</td>
 				<td>{{ lib[ISBN]['PUBLISHER'] }}</td>
 				<td>{{ lib[ISBN]['PUBLICATION_YEAR'] }}</td>
 				<td>{{ lib[ISBN]['GENRES'] }}</td>
-                <td>{{ lib[ISBN]['ACQUISITION_DATE'] }}</td>
-                <td>{{ lib[ISBN]['ACQUISITION_LOCATION'] }}</td>
-                <td style="color:blue">{{ lib[ISBN]['HOME_SHELF'] }}</td>
-                {% if lib[ISBN]['BOOK_STATUS'] == 'checked out' %}
-                    <td style="color:red; font-weight: bold;"> Checked out </td>
-                {% elif lib[ISBN]['BOOK_STATUS'] == 'checked in' %}
-                    <td style="color:green; font-weight: bold;"> Checked in </td>
+				<td>{{ lib[ISBN]['ACQUISITION_DATE'] }}</td>
+				<td>{{ lib[ISBN]['ACQUISITION_LOCATION'] }}</td>
+				<td style="color:blue">{{ lib[ISBN]['HOME_SHELF'] }}</td>
+				{% if lib[ISBN]['BOOK_STATUS'] == 'checked out' %}
+				<td style="color:red; font-weight: bold;">{{ ui_translations['book_table_checkedout'][ui_lang] }}</td>
+				{% elif lib[ISBN]['BOOK_STATUS'] == 'checked in' %}
+				<td style="color:green; font-weight: bold;">{{ ui_translations['book_table_checkedin'][ui_lang] }}</td>
 			    {% else %}
-					<td> {{ lib[ISBN]['BOOK_STATUS'] }} </td>
-                {% endif %}
-                <td>{{ lib[ISBN]['LAST_TRANSACTION'] }}</td>
-            </tr>
-            {% endfor -%}
+				<td> {{ lib[ISBN]['BOOK_STATUS'] }} </td>
+				{% endif %}
+				<td>{{ lib[ISBN]['LAST_TRANSACTION'] }}</td>
+			</tr>
+			{% endfor -%}
 			{% endif %}
 			</tbody>
-        </table>
+		</table>
 		<script type="text/javascript">
 			var currentdate = new Date();
 			var bookrows = document.getElementsByClassName("book_row");
 			for (i=0; i < bookrows.length; i++) {
 				// 1000*60*60*24=86400000
-				if ((bookrows[i].cells[7].innerText == "Checked out") && ((currentdate.getTime() - (Date.parse(bookrows[i].cells[8].innerText))) / 86400000 > {{ past_due }} )) {
+				if (
+					(bookrows[i].cells[10].innerText == "{{ ui_translations['book_table_checkedout'][ui_lang] }}")
+					&&
+					((currentdate.getTime() - (Date.parse(bookrows[i].cells[11].innerText))) / 86400000 > {{ past_due }} )
+					) {
 						alert("Book '" + bookrows[i].cells[1].innerText + "' checked out for over {{ past_due }} days");
 				}
 			}
 		</script>
-    </body>
+	</body>
 </html>
